# submission

./: .gitignore
experiments/eight_schools/original/run_134557450862/: FINAL_REPORT_SUMMARY.md  PROJECT_COMPLETE.md  log.md  pyproject.toml
experiments/eight_schools/original/run_134557450862/data/: data.csv
experiments/eight_schools/original/run_134557450862/eda/: ANALYSIS_COMPLETE.txt  EXECUTIVE_SUMMARY.md  README.md  eda_log.md  eda_report.md  school_summary_table.csv
experiments/eight_schools/original/run_134557450862/experiments/: ADEQUACY_SUMMARY.md  adequacy_assessment.md  experiment_plan.md
experiments/eight_schools/original/run_134557450862/final_report/: README.md  executive_summary.md  report.md
experiments/eight_schools/original/run_134557904908/: log.md  pyproject.toml
experiments/eight_schools/original/run_134557904908/eda/: README.md  eda_log.md  eda_report.md
experiments/eight_schools/original/run_134557904908/experiments/: adequacy_assessment.md  experiment_plan.md
experiments/eight_schools/original/run_134557904908/final_report/: INDEX.md  PROJECT_SUMMARY.txt  README.md  executive_summary.md  report.md
experiments/eight_schools/simulated/run_180418762999/: log.md  pyproject.toml
experiments/eight_schools/simulated/run_180418762999/data/: data.csv
experiments/eight_schools/simulated/run_180418762999/eda/: README.md  eda_log.md  eda_report.md  findings.md
experiments/eight_schools/simulated/run_180418762999/experiments/: adequacy_assessment.md  experiment_plan.md
experiments/eight_schools/simulated/run_180418762999/final_report/: README.md  executive_summary.md  report.md
experiments/surgical/original/run_083240188132/: PROJECT_COMPLETE.md  convert_data.py  log.md  pyproject.toml
experiments/surgical/original/run_083240188132/data/: data_analyst_2.csv
experiments/surgical/original/run_083240188132/eda/: eda_report.md  synthesis.md
experiments/surgical/original/run_083240188132/experiments/: PHASE_5_COMPLETE.md  adequacy_assessment.md  experiment_plan.md
(+2125 files in other folders)
