[project]
name = "bayesian-eight-schools"
version = "0.1.0"
description = "Bayesian modeling of hierarchical meta-analysis data"
requires-python = ">=3.10"
dependencies = [
    "cmdstanpy>=1.2.0",
    "arviz>=0.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
