[project]
name = "bayesian-modeling-project"
version = "0.1.0"
description = "Bayesian modeling analysis"
requires-python = ">=3.10"
dependencies = [
    "cmdstanpy>=1.2.0",
    "arviz>=0.17.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
