[project]
name = "bayesian-binomial-modeling"
version = "0.1.0"
description = "Bayesian analysis of binomial rate data"
requires-python = ">=3.10"
dependencies = [
    "cmdstanpy>=1.2.0",
    "arviz>=0.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
